--- a/team-gavin/Starbug/Storydoard/GameRecords.storyboard
+++ b/team-gavin/Starbug/Storydoard/GameRecords.storyboard
@@ -12,7 +12,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Game Records View Controller-->
+        <!--遊戲紀錄-->
         <scene sceneID="coh-g3-QoM">
             <objects>
                 <viewController storyboardIdentifier="GameRecordsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="k6I-ER-YoF" customClass="GameRecordsViewController" customModule="Starbug" customModuleProvider="target" sceneMemberID="viewController">
@@ -108,15 +108,6 @@
                                     <outlet property="delegate" destination="k6I-ER-YoF" id="rpm-Uk-TJS"/>
                                 </connections>
                             </tableView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zBT-xM-d3N">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="遊戲紀錄" id="BQy-7H-rvv">
-                                        <barButtonItem key="leftBarButtonItem" title="Item" id="VVp-S9-joN"/>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -127,13 +118,24 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fXR-yr-fOp"/>
                     </view>
+                    <navigationItem key="navigationItem" title="遊戲紀錄" id="p8q-ns-c9k">
+                        <barButtonItem key="leftBarButtonItem" title="Item" image="Back_12.870967741935px_1180766_easyicon.net" id="FzO-Pl-Onj">
+                            <connections>
+                                <segue destination="KVk-EQ-mqj" kind="unwind" unwindAction="unwindToMainViewController:" id="86V-au-JcP"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="gameRecordTableView" destination="VEu-Ue-T6c" id="qK6-zu-CaJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2QS-Uq-988" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="KVk-EQ-mqj" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="372" y="-194.75262368815595"/>
+            <point key="canvasLocation" x="1278.2608695652175" y="-194.83695652173915"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Back_12.870967741935px_1180766_easyicon.net" width="12" height="22"/>
+    </resources>
 </document>
