--- a/team-gavin/Starbug/Storydoard/QRCode.storyboard
+++ b/team-gavin/Starbug/Storydoard/QRCode.storyboard
@@ -21,14 +21,25 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="05p-WK-mmF">
                                 <rect key="frame" x="154" y="378" width="106" height="44"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                                <state key="normal" title="打開相機"/>
+                                <state key="normal" title="打開相機">
+                                    <color key="titleColor" red="0.0" green="0.3411764706" blue="0.57254901960000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                                 <connections>
                                     <segue destination="MzX-st-aEe" kind="show" id="Ht5-T9-5eC"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera" translatesAutoresizingMaskIntoConstraints="NO" id="0Kw-Gv-viV">
+                                <rect key="frame" x="157" y="228" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="FCA-WQ-JMx"/>
+                                    <constraint firstAttribute="height" constant="100" id="vci-e1-FKG"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="0Kw-Gv-viV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bqf-lh-i50"/>
+                            <constraint firstItem="05p-WK-mmF" firstAttribute="top" secondItem="0Kw-Gv-viV" secondAttribute="bottom" constant="50" id="duH-G2-soP"/>
                             <constraint firstItem="05p-WK-mmF" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="gVI-7d-hd8"/>
                             <constraint firstItem="05p-WK-mmF" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="wdU-Pm-77i"/>
                         </constraints>
@@ -105,6 +116,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="r9l-Go-8oS">
                         <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.0" green="0.3411764706" blue="0.57254901960000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -116,4 +131,8 @@
             <point key="canvasLocation" x="348" y="134"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="camera" width="80" height="80"/>
+    </resources>
+    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
